[gd_scene load_steps=2 format=3 uid="uid://battleui1"]

[ext_resource type="Script" path="res://scripts/ui/BattleUI.gd" id="1"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TopLeft" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0

[node name="PlayerInfo" type="Label" parent="TopLeft"]
layout_mode = 2
text = "Player 1"
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16

[node name="PlayerHeroType" type="Label" parent="TopLeft"]
layout_mode = 2
text = "Hero: --"
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18

[node name="PlayerHP" type="Label" parent="TopLeft"]
layout_mode = 2
text = "Player HP: --"
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20

[node name="AttackCooldown" type="Label" parent="TopLeft"]
layout_mode = 2
text = "Attack: Ready"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16

[node name="TopRight" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="EnemyInfo" type="Label" parent="TopRight"]
layout_mode = 2
text = "Player 2"
horizontal_alignment = 2
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16

[node name="EnemyHeroType" type="Label" parent="TopRight"]
layout_mode = 2
text = "Hero: --"
horizontal_alignment = 2
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18

[node name="EnemyHP" type="Label" parent="TopRight"]
layout_mode = 2
text = "Enemy HP: --"
horizontal_alignment = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20

[node name="TopCenter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="MatchTimer" type="Label" parent="TopCenter"]
layout_mode = 2
text = "10:00"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="BottomLeft" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="EffectsLabel" type="Label" parent="BottomLeft"]
layout_mode = 2
text = "Active Effects:"
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="EffectsContainer" type="VBoxContainer" parent="BottomLeft"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AbilityQ" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QLabel" type="Label" parent="HBoxContainer/AbilityQ"]
layout_mode = 2
text = "Q Ability"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="AbilityName" type="Label" parent="HBoxContainer/AbilityQ"]
layout_mode = 2
text = "Ability Name"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14

[node name="CooldownLabel" type="Label" parent="HBoxContainer/AbilityQ"]
layout_mode = 2
text = "Q: Ready"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18

[node name="AbilityE" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ELabel" type="Label" parent="HBoxContainer/AbilityE"]
layout_mode = 2
text = "E Ability"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="AbilityName" type="Label" parent="HBoxContainer/AbilityE"]
layout_mode = 2
text = "Ability Name"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14

[node name="CooldownLabel" type="Label" parent="HBoxContainer/AbilityE"]
layout_mode = 2
text = "E: Ready"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18

